<resources>
    <string name="app_name">Garamgaebi2</string>

    <string name="welcome1">가천인을 위한 공간,</string>
    <string name="welcome2">가람개비에 오신 것을 환영합니다</string>

    <string name="go_register">가입하기</string>
    <string name="got_login"><u>로그인하기</u></string>
    <string name="start">시작하기</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="email">이메일 주소</string>
    <string name="nickname">닉네임</string>
    <string name="major">학과 정보</string>
    <string name="major_hint">학과를 선택해주세요</string>
    <string name="major_error">학과 에러</string>
    <string name="company">근무 정보</string>
    <string name="company_hint">회사명을 기입해주세요</string>
    <string name="company_error">회사 에러</string>

    <string name="email_code">인증 코드</string>
    <string name="resend"><u>재전송하기</u></string>
    <string name="resend_2">재전송</string>

    <string name="email_code_error">잘못된 코드를 입력하셨습니다!</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="gc_email">\&#64;gachon.ac.kr</string>

    <string name="find_id_pw">아이디/비밀번호 찾기</string>

    <string name="id_error">이미 가입된 아이디 입니다.</string>
    <string name="pw_error">아이디 혹은 비밀번호가 틀렸습니다!</string>
    <string name="email_error">잘못된 코드를 입력하셨습니다!</string>

    <string name="pw_register_error">비밀번호 형식 에러</string>
    <string name="pw_check_error">비밀번호 일치 에러</string>

    <string name="next">다음으로</string>
    <string name="authenticate">인증하기</string>

    <string name="register1_1">가입 전,\n학교 인증을 진행할게요</string>
    <string name="register1_2">가입을 위해서 가천대 포털 이메일 인증이 진행됩니다.\n포털 이메일을 만드시거나, 계정을 찾으시려면\n<u>portal.gachon.ac.kr/</u> 으로 방문해주세요.</string>
    <string name="register1_3">본인 명의가 아닌 웹메일을 도용할 경우,\n관련법에 따라 법적책임이 따를 수 있습니다.</string>

    <string name="register2_1">인증코드가 전송되었어요!</string>
    <string name="register2_2">포털 이메일로 전송된 6자리 인증 코드를 입력해주세요</string>

    <string name="email_bottom_dialog_1">아래 이메일을 다시 확인 부탁드려요!</string>
    <string name="email_bottom_dialog_2">받은 메일함, 스팸메일함과 메일함의 용량을\n확인해주세요. 메일을 계속해서 받을 수 없을 경우,\n<u>고객센터</u>로 연락해주세요</string>

    <string name="register3_1">가입 정보를 입력해주세요</string>
    <string name="nickname_description">닉네임은 4글자이상 10글자 이하로 정할 수 있어요</string>
    <string name="nickname_error">닉네임은 4글자이상 10글자 이하여야 해요!</string>
    <string name="nickname_duplicate">이미 사용중인 닉네임입니다.</string>
    <string name="nickname_hint">김가천</string>

    <string name="register4_1">세부 정보를 입력해주세요</string>
    <string name="register4_2">현재 사용자님은?</string>

    <string name="student">신입생·재학생</string>
    <string name="graduate">졸업생·교직원</string>

    <string name="terms_title">전체 약관에 동의합니다.</string>
    <string name="terms_description_1"><u>서비스 이용약관 </u></string>
    <string name="terms_description_2"><u>개인정보 처리 방침 </u></string>
    <string name="terms_description_3"><u>커뮤니티 이용 규칙 </u></string>
    <string name="agree"> 동의 (필수)</string>
    <string name="agree2"> 확인 (필수)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="go_home"> 홈으로 이동</string>
    <!--메인 피드-->
    <string name="member">회원</string>

    <!-- 사이드바 -->
    <string name="all_community">전체 커뮤니티</string>
    <string name="make_community">커뮤니티 만들기</string>
    <string name="my_community">내 커뮤니티</string>
    <string name="setting">환경설정</string>
    <string name="logout">로그아웃</string>
    <string name="created_date">2023.12.25에 생성됨</string>

    <!-- 게시물 스레드 -->
    <string name="thread_name">이름은열자이내로작성</string>
    <string name="thread_major">재학또는졸업 학과</string>
    <string name="thread_study">스터디이름 스터디</string>
    <string name="thread_level">회원</string>
    <string name="thread_content_1">커뮤니티 프로필로 작성한 게시물 입니다.</string>
    <string name="thread_content_2">답변 게시물 텍스트 시작점입니다.</string>
    <string name="thread_number">999</string>
    <string name="thread_day">2023.12.25 18:02</string>
    <string name="thread_answer">답변 게시물 작성하기</string>

    <string name="thread_remove">삭제 하기</string>
    <string name="thread_remove_description">정말 게시물을 삭제하시겠어요?</string>
    <string name="thread_report">신고 하기</string>

    <string name="go_logout">로그아웃 하기</string>
    <string name="go_logout_description">정말 로그아웃 하시겠어요?</string>


    <!-- 게시글 작성 -->
    <string name="write_post_title">게시글 작성</string>
    <string name="write_post_choose_profile">프로필 선택</string>
    <string name="write_post_personal_profile">개인 프로필로 작성하기</string>
    <string name="write_post_et_cnt_max">/ 500</string>
    <string name="write_post_et_hint">여기에 게시물을 작성하세요.</string>
    <string name="long_test">ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ</string>
    <string name="short_test">mmm</string>
    <!-- 답변 게시글 작성-->
    <string name="write_answer_post_title">답변 게시물 작성</string>
    <!-- 공지 작성-->
    <string name="write_notice_title">공지 작성</string>
    <!-- 커뮤니티 프로필 메뉴 -->
    <string name="profile_edit">프로필 편집</string>
    <string name="post_notice">공지 작성</string>
    <string name="manage_member">회원 관리</string>
    <string name="share_community">공유하기</string>
    <string name="withdrawal">탈퇴하기</string>
    <string name="withdrawal_description">정말 탈퇴하시겠어요?</string>
    <string name="withdrawal_content">\'커뮤니티 커뮤니티 커뮤니티\'</string>

    <string name="close">닫기</string>

    <string name="community_profile_edit">커뮤니티 편집</string>

    <string name="community_name">이름</string>
    <string name="community_name_hint">이름은 28자 이하로 정할 수 있어요</string>

    <string name="community_profile_description">커뮤니티 설명</string>
    <string name="community_profile_description_hint">설명은 80자 이하로 작성 할 수 있어요</string>

    <string name="reference_link">참조 링크</string>
    <string name="reference_link_hint">불건전한 링크 활용시, 사용에 제한이 있을 수 있습니다.</string>

    <string name="close_community">커뮤니티 종료하기</string>

    <string name="community_profile_name">커뮤니티커뮤니티커뮤니티</string>
    <string name="community_profile_date">2023.12.25 에 생성됨</string>
    <string name="community_profile_member_active">22 명 활동 중</string>
    <string name="community_profile_content">커뮤니티 설명 글자수 제한은 80자 입니다.</string>
    <string name="community_profile_notice">공지</string>
    <string name="community_profile_notice_num">12건</string>
    <string name="community_profile_notice_content">전체 타임라인 게시글은 최대 120자 입니다.</string>
    <string name="community_profile_day">2023.12.25 18:02</string>
    <string name="community_profile_link">참조 링크</string>
    <string name="community_profile_link_content">https://www.naver.com/</string>
    <string name="community_profile_leader">모임장</string>
    <string name="community_profile_leader_num">2명</string>
    <string name="community_profile_leader_name">이름은열자이내로작성</string>
    <string name="community_profile_leader_major">재학또는졸업 학과</string>
    <string name="community_profile_member">가입 회원</string>
    <string name="community_profile_member_num">22명</string>
    <string name="community_profile_post">작성된 게시물</string>
    <string name="community_profile_post_num">22건</string>
    <string name="community_profile_join">가입중</string>
    <string name="community_profile_join_request">가입 신청</string>

    <!--회원관리-->
    <string name="manage_member_leader">모임장</string>
    <string name="manage_member_create_date">2023.12.25 에 생성됨</string>
    <string name="manage_member_apply_date">2023.12.25 18:02 신청함</string>
    <string name="manage_member_date">2023.12.25 18:02 신청함</string>
    <string name="manage_member_active">22 명 활동 중</string>
    <string name="manage_member_cnt">2명</string>
    <string name="manage_member_community_register_apply">가입 신청 회원</string>
    <string name="manage_member_community_all">전체 회원</string>
    <string name="manage_member_bottom_dialog_export">내보내기</string>
    <string name="manage_member_bottom_dialog_add_leader">모임장 추가하기</string>
    <string name="manage_member_item_export">내보내기</string>
    <string name="manage_member_item_add_leader">모임장 추가</string>
    <!--프로필-->
    <string name="my_profile">내 프로필</string>
    <string name="user_profile_description">자기 소개</string>
    <string name="user_profile_community_description">대표 커뮤니티</string>
    <string name="user_profile_no_community">현재 커뮤니티가 없습니다!</string>
    <string name="user_profile_no_select">대표 커뮤니티를 등록하지 않기</string>

    <string name="user_profile_description_hint">소개는 80자 이하로 작성 할 수 있어요</string>
</resources>


