<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <ImageView
        android:id="@+id/logo_iV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gb_logo"
        android:layout_marginTop="@dimen/main_logo_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome1_tv"
        />

    <TextView
        android:id="@+id/welcome1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:textColor="@color/main_blue"
        android:textStyle="bold"
        android:textSize="19sp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:layout_marginTop="61dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iV"
        />
    <TextView
        android:id="@+id/welcome2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome1_tv"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:textColor="@color/white"
        android:text="@string/go_register"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:textAlignment="center"
        android:background="@drawable/round_btn_blue"
        android:layout_marginHorizontal="@dimen/main_register_button_margin_horizontal"
        android:layout_marginBottom="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_tv"/>

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_login"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="16sp"
        android:fontFamily="@font/spoqa_han_sans_neo_medium"
        android:layout_marginBottom="@dimen/main_login_button_margin_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>