<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity"
    android:background="@color/main_blue"
    >
    <FrameLayout
        android:id="@+id/iv_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome1_tv"
        >
        <ImageView
            android:id="@+id/logo_iV_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gc_logo_white_layer"
            android:layout_marginTop="130dp"

            />
        <ImageView
            android:id="@+id/logo_iV_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gc_logo_black_layer"
            android:layout_marginTop="130dp"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/welcome1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="19sp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:layout_marginTop="61dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_layout"
        />
    <TextView
        android:id="@+id/welcome2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="19sp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome1_tv"
        />

    <Button
        android:id="@+id/mainFeed_btn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:textColor="@color/main_blue"
        android:text="@string/go_home"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:textAlignment="center"
        android:background="@drawable/round_btn_white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="@dimen/register_button_margin_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>