<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.write.WritePostActivity">

    <data>

        <variable
            name="viewModel"
            type="com.gachon.garamgaebi2.viewModel.CommunityProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:layout_marginHorizontal="@dimen/toolbar_margin_horizontal"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/spoqa_han_sans_neo_medium"
                    android:text="@string/manage_member"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/complete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:enabled="@{viewModel.isManageComplete}"
                    android:src="@drawable/activity_top_bar_complete_btn_selector" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/manage_member_scrollview_margin_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/activity_manage_member_community_name_tv"
                    android:text="@string/community_profile_name"
                    android:textSize="20sp"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/manage_member_scrollview_margin_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/activity_manage_member_community_date_tv"
                    android:text="@string/community_profile_date"
                    android:textSize="12sp"
                    android:fontFamily="@font/spoqa_han_sans_neo_medium"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/activity_manage_member_community_active_tv"
                    android:text="@string/community_profile_member_active"
                    android:textSize="12sp"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:textColor="@color/main_blue"
                    android:layout_marginEnd="@dimen/manage_member_scrollview_margin_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/activity_manage_member_register_apply_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36.5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_manage_member_register_apply_title_tv"
                        android:text="@string/manage_member_community_register_apply"
                        android:textSize="16sp"
                        android:fontFamily="@font/spoqa_han_sans_neo_bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/activity_manage_member_register_apply_cnt_tv"
                        android:text="@string/manage_member_cnt"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/spoqa_han_sans_neo_bold"
                        android:textColor="@color/main_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/activity_manage_member_register_apply_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/manage_member_rv_margin_end"/>
                <LinearLayout
                    android:id="@+id/activity_manage_member_all_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36.5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_manage_member_all_title_tv"
                        android:text="@string/manage_member_community_register_apply"
                        android:textSize="16sp"
                        android:fontFamily="@font/spoqa_han_sans_neo_bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/activity_manage_member_all_cnt_tv"
                        android:text="@string/manage_member_cnt"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/spoqa_han_sans_neo_bold"
                        android:textColor="@color/main_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/activity_manage_member_all_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="120dp"
                    android:layout_marginEnd="@dimen/manage_member_rv_margin_end"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>